--- a/kafka-broker/package.json
+++ b/kafka-broker/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "kafka-node": "^5.0.0",
     "uuid": "^8.3.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
