--- a/kafka-broker/package.json
+++ b/kafka-broker/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "kafka-node": "^5.0.0",
+    "kafkajs": "^1.15.0",
+    "mongoose": "^6.0.6",
     "uuid": "^8.3.2"
   },
   "scripts": {
