--- a/order-service/package.json
+++ b/order-service/package.json
@@ -4,9 +4,13 @@
   "main": "index.js",
   "author": "jin",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^6.0.6",
     "uuid": "^8.3.2"
+  },
+  "scripts": {
+    "start:order": "node index.js"
   }
 }
